# greenland

./: .gitignore  Cargo.toml  greenland.toml
src/: app.rs  lib.rs  main.rs  utils.rs
src/app/: history.rs  ref_color.rs  request.rs  ui.rs
src/app/request/: redo.rs  undo.rs
src/app/ui/: color_picker.rs  dialog.rs  main_area.rs  menu.rs  toast.rs
src/app/ui/dialog/: alert.rs  color_entry_edit.rs  color_purpose_edit.rs  confirm.rs  export.rs  ref_color.rs  test.rs
src/utils/: jetbrains.rs  oklch.rs  scheme.rs  template.rs
templates/: firefox.template  jb.template  nvim.template  tc.template  vsc.template  wt.template
vscode/: package.json
